--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -1,7 +1,7 @@
 # Each route describes how an incoming URL will be processed by Platform.sh.
 "https://{default}/":
     type: upstream
-    upstream: "blog:http"
+    upstream: "blogs:http"
 "https://www.{default}/":
     type: redirect
     to: "https://{default}/"
